# yggdrasil

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/src/: __init__.py  config.py  database.py  main.py  models.py
docs/: ontology.md
supabase/: config.toml
supabase/migrations/: 20251125130243_create_initial_schemas.sql
supabase/schemas/: 001_core.sql  002_graph.sql  003_type_registry.sql
supabase/seeds/: 001_type_defaults.sql
web/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  supabaseClient.ts
web/src/auth/: AuthProvider.tsx  ProtectedRoute.tsx  PublicOnlyRoute.tsx
web/src/components/: Layout.tsx  LoginButton.tsx  LoginModal.tsx  LogoutButton.tsx  Sidebar.tsx  ThemeToggle.tsx  Topbar.tsx  logo.tsx
web/src/hooks/: usePostAuthWriteback.ts
web/src/pages/: Account.tsx  DevShell.tsx  Home.tsx  MarketingHome.tsx  NotFound.tsx
web/src/styles/: marketing.css
