[project]
name = "yggdrasil-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.29",
    "psycopg[binary]>=3.1.18",
    "python-dotenv>=1.0.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "supabase>=2.24.0",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
]
test = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
    "pytest-mock>=3.15.1",
    "requests-mock>=1.12.1",
]


[project.scripts]
local = "APP_ENV=local DEBUG=1 uvicorn app.main:app --reload"
prod  = "APP_ENV=prod DEBUG=0 uvicorn app.main:app"


[tool.pytest.ini_options]
env = [
]
asyncioo_default_fixture_loop_scope = "function"
addopts = ["--cov=src", "--cov-report=term", "--ignore=scripts"]

[tool.coverage.report]
exclude_also=[
    "if settings.DEBUG:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pragma: no cover",
]
omit = [
    "tests/*",
    "scripts/*",
]
